--- a/configs.json
+++ b/configs.json
@@ -2,7 +2,7 @@
     "scripts": [
         {
             "username": "mobcher",
-            "url": "https://cdn.discordapp.com/avatars/254398453826715658/a_6aaf55ea99c018d450973a295ee36e3e.webp?size=28",
+            "url": "https://cdn.discordapp.com/embed/avatars/0.png",
             "pfpUrl": "https://cdn.discordapp.com/avatars/254398453826715658/a_6aaf55ea99c018d450973a295ee36e3e.gif?size=1024",
             "name": "rage-aspect.cfg"
         },
