--- a/configs.json
+++ b/configs.json
@@ -2,7 +2,7 @@
     "scripts": [
         {
             "username": "mobcher",
-            "url": "https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.reddit.com%2Fr%2Fnigababy7%2Fcomments%2Fhz1pfq%2Fniga%2F&psig=AOvVaw2dbX_9oKkrxZq2axcn0wYZ&ust=1721154817888000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCNDAxr7XqYcDFQAAAAAdAAAAABAE",
+            "url": "https://raw.githubusercontent.com/komornik13/lua-resources/main/configs/rage-aspect.cfg",
             "pfpUrl": "https://cdn.discordapp.com/avatars/254398453826715658/a_6aaf55ea99c018d450973a295ee36e3e.gif?size=1024",
             "name": "rage-aspect.cfg"
         },
