--- a/configs.json
+++ b/configs.json
@@ -3,7 +3,7 @@
         {
             "username": "mobcher",
             "url": "https://raw.githubusercontent.com/komornik13/lua-resources/main/configs/rage-aspect.cfg",
-            "pfpUrl": "https://cdn.discordapp.com/avatars/254398453826715658/a_6aaf55ea99c018d450973a295ee36e3e.gif?size=1024",
+            "pfpUrl": "https://preview.redd.it/dmh4hz7r0hd51.jpg?width=508&format=pjpg&auto=webp&s=d928154280faa026baa8731be4bb39bb6b93c731",
             "name": "rage-aspect.cfg"
         },
         {
