--- a/configs.json
+++ b/configs.json
@@ -10,7 +10,7 @@
             "username": "mobcher",
             "url": "https://raw.githubusercontent.com/komornik13/lua-resources/main/configs/SWEDEN%20RAGE%20MOB.cfg",
             "pfpUrl": "https://preview.redd.it/dmh4hz7r0hd51.jpg?width=508&format=pjpg&auto=webp&s=d928154280faa026baa8731be4bb39bb6b93c731",
-            "name": "SWEDEN RAGE MOB.cfg"
+            "name": "SWEDEN RAGE.cfg"
         },
         {
             "username": "sou_gado_mesmo",
